Get the right view when positioning context menus.  Bug 185107, r=hyatt, sr=jag